fixed treatment spacing and added number

--- a/src/stylesheets/plan.scss
+++ b/src/stylesheets/plan.scss
@@ -75,20 +75,6 @@
       opacity: .4;
     }
   }
-  .workout-index { // workout row number
-    z-index: 1;
-    position: absolute;
-    margin-left: -15px;
-    margin-top: -15px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 35px;
-    width: 35px;
-    border-radius: 50%;
-    background-color: $numbers;
-    color: $text-light;
-  }
   .workout-pic-wrapper {
     width: 100%;
     background: 
