--- a/src/stylesheets/treatments.scss
+++ b/src/stylesheets/treatments.scss
@@ -4,7 +4,7 @@
   width: 100%;
   display: flex;
   flex-direction: column;
-  padding: 10px;
+  padding: 15px 10px;
 }
 
 .treatment {
@@ -12,10 +12,11 @@
   flex-direction: row;
   color: $text-dark;
   > img { // exercise image
-    max-width: 50%;
+    min-width: 250px;
     max-height: 200px;
   }
   > .treatment-info {
+    width: 100%;
     display: inherit;
     flex-direction: column;
     padding: 5px 10px;
@@ -41,4 +42,22 @@
       padding-top: 5px;
     }
   }
+  + .treatment {
+    padding-top: 25px;
+  }
+}
+
+.treatment-number { // treatment/workout row number
+  z-index: 1;
+  position: absolute;
+  margin-left: -15px;
+  margin-top: -15px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 35px;
+  width: 35px;
+  border-radius: 50%;
+  background-color: $numbers;
+  color: $text-light;
 }
